2003/05/09: Aurelien Marchand (artaxerxes@users.sf.net)
	* added command option to tools/cmanip.cc to return the value of a key

2003-05-05 Tristan Tarrant <nadir@users.sourceforge.net>
	* exult.cc, audio/Midi.cc: add new configuration
	  config/disk/music_path, where the user can specify a path to the
	  OGG files

2003-05-04 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/*.xml: updated
	* docs/*.html, exult_studio.txt: updated
	* docs/usecode_bugs.txt: added SI-SS pillars bug
	* FAQ, ReadMe : updated and spellchecked
	
2003-04-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/objedit.cc: properly load/save shape/frame/quality for objs
	* palette.cc: removed unnecessary palette changes

2003-04-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* docs/usecode_bugs.txt: added some bugs from the forum

2003-04-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: use unsigned char to index font frames.

2003-04-12  Jeff Freedman  <jeff@amy.nerble.net>

	* party.cc,gamewin.cc:  Experimental (and half-done) code to have
	the party walk in formation.

2003-04-09  Jeff Freedman  <jeff@amy.nerble.net>

	* party.h,party.cc,etc:  Moved party handler to new file/class,
	which will possibly be used to implement 'formation' following later.

2003-03-26  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objnames.cc: Check that index is within valid list of names.

2003-03-22  Jeff Freedman  <jeff@amy.nerble.net>

	* bgintrinsics.h,intrinsics.cc,gamewin.cc:  Implemented
	'call_guards()' usecode intrinsic.

2003-03-19  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc: Quality 'okay-to-take' flag should override default,
	so that food can be treated as 'stolen'.

2003-03-18  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Mark egg as 'hatched' even if it fails
	the probability test.  (This is experimental.)

2003-03-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>